# proyecto-espada

./: CMakeLists.txt  Constantes.h  README.md  conandata.yml  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: imfilebrowser.h
modelos/: espada.mtl  sting_sword.mtl  textura_espada.mtl
shader_files/: miShader-fs.glsl  miShader-vs.glsl  shaderSinTextura-fs.glsl  shaderSinTextura-vs.glsl  shaderTextura-fs.glsl  shaderTextura-vs.glsl
utilities/: Camara.cpp  Camara.h  Color.cpp  Color.h  Escena.cpp  Escena.h  FuenteLuz.cpp  FuenteLuz.h  GUI.cpp  GUI.h  Interfaz.cpp  Interfaz.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
utilities/modelo/: Malla.cpp  Malla.h  Material.cpp  Material.h  Modelo.cpp  Modelo.h  Textura.cpp  Textura.h
utilities/ventanas/: Ventana.cpp  Ventana.h  VentanaGestion.cpp  VentanaGestion.h  VentanaGestionModelo.cpp  VentanaGestionModelo.h
utilities/ventanas/submenus/: Menu.h  MenuCamara.cpp  MenuCamara.h  MenuIluminacion.cpp  MenuIluminacion.h  MenuMaterial.cpp  MenuMaterial.h  MenuTransformaciones.cpp  MenuTransformaciones.h
